# TorGen

./: .gitignore  README.md  pyproject.toml
data/: readme_data.txt
docs/: proposal.tex
docs/plans/: 2026-03-12-torgen-implementation-plan.md  2026-03-12-torgen-repo-design.md
notebooks/: analyze.ipynb  analyze_track_order.ipynb  train.ipynb  train_mdn.ipynb  train_seq.ipynb
scripts/: smoke_test.py
src/torgen/: sampling.py
src/torgen/data/: dataset.py  synthetic.py
src/torgen/eval/: evaluate.py  metrics.py
src/torgen/loss/: hungarian.py  mdn.py  sequence.py
src/torgen/model/: cvae.py  decoder.py  encoder.py  mdn_cvae.py  mdn_head.py  seq_cvae.py  seq_decoder.py  track_encoder.py  vae.py
src/torgen/training/: __init__.py  config.py  mdn_config.py  mdn_trainer.py  seq_config.py  seq_trainer.py  trainer.py
src/torgen/viz/: plots.py
