[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torgen"
version = "0.1.0"
description = "DETR-CVAE for synthetic tornado outbreak generation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "scipy",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
viz = ["matplotlib", "cartopy"]
wandb = ["wandb"]
dev = ["pytest"]
all = ["torgen[viz,wandb,dev]"]

[tool.setuptools.packages.find]
where = ["src"]
